added code to manage user error messages
added code to manage user error messages

--- a/package.json
+++ b/package.json
@@ -21,6 +21,8 @@
     "express-validator": "*",
     "fs-extra": "*",
     "googleapis": "^39.2.0",
-    "mongoose": "*"
+    "mongoose": "*",
+    "nodemailer": "^6.4.6",
+    "req-flash": "0.0.3"
   }
 }
