--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "bootstrap": "^4.4.1",
     "bootswatch": "^4.4.1",
     "connect-flash": "*",
+    "dateformat": "^3.0.3",
     "ejs": "*",
     "express": "*",
     "express-fileupload": "*",
